# SCIOS

./: .gitignore  LICENSE  README.md
backend/: .env.example  .gitignore  Makefile  pyproject.toml
backend/src/: main.py
backend/src/agents/: llm_client.py
backend/src/agents/assistant/: runner.py
backend/src/agents/exploration/: __init__.py  pipeline.py  planner.py  retriever.py  router.py  schemas.py  synthesizer.py
backend/src/agents/landscape/: __init__.py  analyzer.py  assembler.py  evaluation.py  graph_builder.py  incremental.py  orchestrator.py  pipeline.py  planner.py  prompts.py  retriever.py  schemas.py
backend/src/agents/monitoring/: __init__.py  pipeline.py  prompts.py  schemas.py
backend/src/agents/prompts/: planner.py  synthesizer.py
backend/src/core/: __init__.py  config.py
backend/src/models/: __init__.py  assistant.py  db.py  landscape.py  paper.py
backend/src/services/: notification.py  scheduler.py  task_manager.py
backend/tests/: conftest.py  test_academic_tools.py  test_api.py  test_assistant_runner.py  test_db_migration.py  test_evaluation.py  test_exploration.py  test_fs_tools.py  test_http.py  test_landscape_memory.py  test_landscape_pipeline.py  test_landscape_schemas.py  test_latex_tools.py  test_llm_client.py  test_memory.py  test_monitoring_api.py  test_monitoring_pipeline.py  test_new_landscape_agents.py  test_notification.py  test_paper_fetcher.py  test_router.py  test_s2_client.py  test_shell_tool.py  test_sources.py  test_task_progress_manager.py  test_web_search.py  test_ws_assistant.py
frontend/: next.config.ts  (+2 more)
(+94 files in other folders)
